correct cursors added updated radio buttons
you can click the label for the radio button to select it now. Also the
cursor changes to a pointer to show its clickable.
sliders also change the cursor so the user knows they are clickable.

--- a/ToolbeltJS/web.config
+++ b/ToolbeltJS/web.config
@@ -6,5 +6,14 @@
                 <add value="index.php" />
             </files>
         </defaultDocument>
+        <httpErrors errorMode="Custom">
+            <remove statusCode="404" subStatusCode="-1" />
+            <error statusCode="404" prefixLanguageFilePath="" path="10.0.0.119:8888" responseMode="Redirect" />
+        </httpErrors>
     </system.webServer>
+    <system.web>
+        <customErrors defaultRedirect="10.0.0.119:8888" mode="On">
+            <error redirect="10.0.0.119:8888" statusCode="404" />
+        </customErrors>
+    </system.web>
 </configuration>
